fixed the layout issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
     height: 100vh;
-    width: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
